RESOLVED FIXED179485
ServiceWorkerClientFetch should create not null ResourceError
https://bugs.webkit.org/show_bug.cgi?id=179485
Summary ServiceWorkerClientFetch should create not null ResourceError
youenn fablet
Reported 2017-11-09 09:07:34 PST
DocumentLoader has an assertion checking that errors are not null
Attachments
Patch (2.11 KB, patch)
2017-11-09 09:09 PST, youenn fablet
no flags
youenn fablet
Comment 1 2017-11-09 09:09:20 PST
WebKit Commit Bot
Comment 2 2017-11-09 10:24:25 PST
Comment on attachment 326453 [details] Patch Clearing flags on attachment: 326453 Committed r224633: <https://trac.webkit.org/changeset/224633>
WebKit Commit Bot
Comment 3 2017-11-09 10:24:26 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2017-11-15 09:38:38 PST
Note You need to log in before you can comment on or make changes to this bug.