ServiceWorkerClientFetch should create not null ResourceError https://bugs.webkit.org/show_bug.cgi?id=179485

Patch by Youenn Fablet <youenn@apple.com> on 2017-11-09
Reviewed by Darin Adler.

* WebProcess/Storage/ServiceWorkerClientFetch.cpp:
(WebKit::ServiceWorkerClientFetch::didReceiveResponse):

Canonical link: https://commits.webkit.org/195531@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224633 268f45cc-cd09-0410-ab3c-d52691b4dbfc